--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/registrar-actualiz-polizas-garantias/registrar-actualiz-polizas-garantias.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/registrar-actualiz-polizas-garantias/registrar-actualiz-polizas-garantias.component.html
@@ -63,5 +63,5 @@
 
     <app-tabla-lista-contratos *ngIf="listContrato.length > 0" [listContrato]="listContrato"></app-tabla-lista-contratos>
 
-    <app-tabla-general-rapg></app-tabla-general-rapg>
+    <app-tabla-general-rapg *ngIf="listActualizacion.length > 0" [listaActualizacionPoliza]="listActualizacion"></app-tabla-general-rapg>
 </section>
