--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/accord-vigencias-valor/accord-vigencias-valor.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/accord-vigencias-valor/accord-vigencias-valor.component.html
@@ -3,7 +3,7 @@
         <mat-accordion *ngFor="let seguro of seguros.controls; index as i">
             <mat-expansion-panel class="expansion-style sub-expansion">
                 <mat-expansion-panel-header class="expansion-style--header">
-                    <mat-panel-title class="expansion-style--title sin-diligenciar">
+                    <mat-panel-title class="expansion-style--title" [ngClass]="seguro.get( 'semaforo' ).value">
                         Seguro {{ i + 1 }}
                     </mat-panel-title>
                 </mat-expansion-panel-header>
