--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/actualizar-poliza-rapg/actualizar-poliza-rapg.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/actualizar-poliza-rapg/actualizar-poliza-rapg.component.html
@@ -24,11 +24,11 @@
         <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
             <ng-container matColumnDef="polizaYSeguros">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Polizas y seguros </th>
-                <td mat-cell *matCellDef="let element" align="center"> {{element.polizaYSeguros}} </td>
+                <td mat-cell *matCellDef="let element" align="center"> {{ getPoliza( element.tipoGarantiaCodigo ) }} </td>
             </ng-container>
             <ng-container matColumnDef="responsableAprobacion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Reponsable de la aprobación </th>
-                <td mat-cell *matCellDef="let element" align="center"> {{element.responsableAprobacion}} </td>
+                <td mat-cell *matCellDef="let element" align="center"> {{ getResponsable( ) }} </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
@@ -44,7 +44,7 @@
     <mat-accordion>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title sin-diligenciar">
+                <mat-panel-title class="expansion-style--title" [ngClass]="semaforoAcordeones.acordeonTipoActualizacion">
                     Razón y tipo de actualización
                 </mat-panel-title>
             </mat-expansion-panel-header>
@@ -55,45 +55,45 @@
     <mat-accordion>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title en-alerta">
+                <mat-panel-title class="expansion-style--title" [ngClass]="semaforoAcordeones.acordeonVigenciaValor">
                     Vigencias y valor
                 </mat-panel-title>
             </mat-expansion-panel-header>
 
-            <app-accord-vigencias-valor [contratoPoliza]="contratoPoliza"></app-accord-vigencias-valor>
+            <app-accord-vigencias-valor [contratoPoliza]="contratoPoliza" *ngIf="acordeonRegistroCompleto.acordeonTipoActualizacion === true"></app-accord-vigencias-valor>
         </mat-expansion-panel>
     </mat-accordion>
     <mat-accordion>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title en-alerta">
+                <mat-panel-title class="expansion-style--title" [ngClass]="semaforoAcordeones.acordeonObsEspecifica">
                     Observaciones especificas
                 </mat-panel-title>
             </mat-expansion-panel-header>
 
-            <app-observaciones-especificas-rapg [contratoPoliza]="contratoPoliza"></app-observaciones-especificas-rapg>
+            <app-observaciones-especificas-rapg [contratoPoliza]="contratoPoliza" *ngIf="acordeonRegistroCompleto.acordeonVigenciaValor === true"></app-observaciones-especificas-rapg>
         </mat-expansion-panel>
     </mat-accordion>
     <mat-accordion>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title en-alerta">
+                <mat-panel-title class="expansion-style--title" [ngClass]="semaforoAcordeones.acordeonListaChequeo">
                     Lista de chequeo
                 </mat-panel-title>
             </mat-expansion-panel-header>
 
-            <app-lista-chequeo-rapg [contratoPoliza]="contratoPoliza"></app-lista-chequeo-rapg>
+            <app-lista-chequeo-rapg [contratoPoliza]="contratoPoliza" *ngIf="acordeonRegistroCompleto.acordeonObsEspecifica === true"></app-lista-chequeo-rapg>
         </mat-expansion-panel>
     </mat-accordion>
     <mat-accordion>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title en-alerta">
+                <mat-panel-title class="expansion-style--title" [ngClass]="semaforoAcordeones.acordeonRevision">
                     Revisión y aprobación
                 </mat-panel-title>
             </mat-expansion-panel-header>
 
-            <app-revision-aprobacion-rapg [contratoPoliza]="contratoPoliza"></app-revision-aprobacion-rapg>
+            <app-revision-aprobacion-rapg [contratoPoliza]="contratoPoliza" *ngIf="acordeonRegistroCompleto.acordeonListaChequeo === true"></app-revision-aprobacion-rapg>
         </mat-expansion-panel>
     </mat-accordion>
     <div style="margin-top: 1em;">
