--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-ajuste-programacion/components/ver-historial/ver-historial.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-ajuste-programacion/components/ver-historial/ver-historial.component.html
@@ -12,7 +12,7 @@
         <span>
           Fecha de aprobacion de póliza:
           <b>
-            {{ ajusteProgramacionInfo.fechaAprobacionPoliza }}
+            {{ ajusteProgramacionInfo.fechaAprobacionPoliza  | date: 'dd/MM/yyyy' }}
           </b>
         </span>
         <span>
