--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-ajuste-programacion/components/detalle-tabla-prog-obra/detalle-tabla-prog-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-ajuste-programacion/components/detalle-tabla-prog-obra/detalle-tabla-prog-obra.component.html
@@ -16,7 +16,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           Fecha de cargue
         </th>
-        <td mat-cell *matCellDef="let element"><b>{{element.fechaCargue}}</b></td>
+        <td mat-cell *matCellDef="let element" align="center"><b>{{element.fechaCargue}}</b></td>
       </ng-container>
 
       <!-- numeroToalRegistros Column -->
@@ -24,7 +24,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           Número total de registros
         </th>
-        <td mat-cell *matCellDef="let element">{{element.numeroToalRegistros}}</td>
+        <td mat-cell *matCellDef="let element" align="center">{{element.numeroToalRegistros}}</td>
       </ng-container>
 
       <!-- numeroRegistrosValidos Column -->
@@ -32,7 +32,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           Número de registros validos
         </th>
-        <td mat-cell *matCellDef="let element">{{element.numeroRegistrosValidos}}</td>
+        <td mat-cell *matCellDef="let element" align="center">{{element.numeroRegistrosValidos}}</td>
       </ng-container>
 
       <!-- numeroRegistrosInalidos Column -->
@@ -40,7 +40,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           Número de registros inválidos
         </th>
-        <td mat-cell *matCellDef="let element">{{element.numeroRegistrosInalidos}}</td>
+        <td mat-cell *matCellDef="let element" align="center">{{element.numeroRegistrosInalidos}}</td>
       </ng-container>
 
       <!-- estadoCargue Column -->
@@ -48,7 +48,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           Estado del cargue
         </th>
-        <td mat-cell *matCellDef="let element">
+        <td mat-cell *matCellDef="let element" align="center">
           <span class="info-text d-block m-0" [class.sin-diligenciar]="element.estadoCargue === 'Fallido'"
             [class.completo]="element.estadoCargue === 'Valido'"></span>
           {{element.estadoCargue}}
@@ -62,10 +62,7 @@
           <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button">
             Ver detalle
           </button>
-          <button mat-button color="warn" mat-raised-button color="accent" class="btn-table info-button"
-            [class.sin-diligenciar]="element.estadoRegistro === 'Sin diligenciar'"
-            [class.en-proceso]="element.estadoRegistro === 'En proceso'"
-            [class.completo]="element.estadoRegistro === 'Completo'" type="button"
+          <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
             (click)="openObservaciones(element.id)">
             Observaciones
           </button>
