--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/tabla-liquidacion-contrato-interventoria/tabla-liquidacion-contrato-interventoria.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/tabla-liquidacion-contrato-interventoria/tabla-liquidacion-contrato-interventoria.component.html
@@ -70,14 +70,36 @@
         Gestión
       </th>
       <td mat-cell *matCellDef="let element">
-        <a
+        <a *ngIf="element.estadoValidacionLiquidacionCodigo !== '3'"
           mat-button
           mat-raised-button
           color="accent"
           class="btn-table"
           [routerLink]="['validarRequisitos', element.contratacionProyectoId]"
         >
-          Validar requisitos para liquidación
+          <span *ngIf="element.estadoValidacionLiquidacionCodigo === '0' || element.estadoValidacionLiquidacionCodigo == null">Validar requisitos para liquidación</span>
+          <span *ngIf="element.estadoValidacionLiquidacionCodigo === '1' || element.estadoValidacionLiquidacionCodigo === '2'">Ver detalle/Editar</span>
+        </a>
+        <button
+          *ngIf="element.estadoValidacionLiquidacionCodigo === '2'"
+          mat-button
+          mat-raised-button
+          color="accent"
+          class="btn-table"
+          type="button"
+          (click)="SendToSupervision(element.contratacionProyectoId)"
+        >
+          Enviar al supervisor
+        </button>
+        <a *ngIf="element.estadoValidacionLiquidacionCodigo === '3'"
+          mat-button
+          mat-raised-button
+          color="accent"
+          class="btn-table"
+          type="button"
+          [routerLink]="['verDetalle', element.contratacionProyectoId]"
+        >
+          Ver detalle
         </a>
       </td>
     </ng-container>
