--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-generar-orden-giro/form-generar-orden-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-generar-orden-giro/form-generar-orden-giro.component.html
@@ -52,9 +52,11 @@
             </mat-expansion-panel-header>
 
             <app-accordion-info-general-gog [solicitudPago]="solicitudPago"
-                                            [esVerDetalle]="esVerDetalle">
+                                            [esVerDetalle]="esVerDetalle"
+                                            (tieneObservacion)="semaforoInfoGeneral = 'en-proceso'">
             </app-accordion-info-general-gog>
         </mat-expansion-panel>
+
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
                 <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === false ?semaforoDetalle : ''">
