--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-orden-giro/components/form-aprobar-orden-giro/form-aprobar-orden-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-orden-giro/components/form-aprobar-orden-giro/form-aprobar-orden-giro.component.html
@@ -69,7 +69,7 @@
                 </mat-card-title>
             </mat-card-header>
             <mat-card-content>
-                <p style="margin-left: 2em;"><b>URL con soporte: </b>https://drive.google.com/drive/soportedeordendegiroSolPagoO001firmada</p>
+                <p style="margin-left: 2em;"><b>URL con soporte: </b><i> {{ solicitudPago.ordenGiro.urlSoporteFirmadoAprobar }} </i></p>
             </mat-card-content>
         </mat-card>
     </div>
