--- a/asivamosffie.web/asivamosffie/src/app/_pages/tramitar-orden-giro/components/dialog-descargar-orden-giro/dialog-descargar-orden-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/tramitar-orden-giro/components/dialog-descargar-orden-giro/dialog-descargar-orden-giro.component.html
@@ -7,7 +7,7 @@
 </div>
 
 <section class="container text-center mt-3em" style="width: 100%;">
-    <form [formGroup]="formDate" (ngSubmit)="descargar()">
+    <form [formGroup]="formDate" (ngSubmit)="getOrdenGiroAprobadas()">
         <div class="d-flex justify-content-center">
             <div class="row">
                 <div class="col-md-12">
